fixed index-css misalignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,14 +24,14 @@ body {
     color: #d9dcd6;
 }
 
-.header div {
+.header section {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
-.header div ul li {
+.header section ul li {
     display: inline-block;
     margin-left: 25px;
 }
